translated comments for JS

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       <h1 class="headline">Easy Notes</h1>
     </header>
      <div id="menu" class="menu">
-          <a href="index.html"> <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen">Notizen</a>
-          <a href="trash.html"> <img class="sidemenuIcon" src="./img/delete.png" alt="Papierkorb">Papierkorb</a>
+          <a href="index.html"> <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen">Notes</a>
+          <a href="trash.html"> <img class="sidemenuIcon" src="./img/delete.png" alt="Papierkorb">Trash</a>
         </div>
    <section class="inputContainer">
       <div class="inputBox">
