--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Easy Notes</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="template.js"></script>
     <script src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="./img/notizblock.png" />
   </head>
