--- a/trash.html
+++ b/trash.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Notes</title>
     <link rel="stylesheet" href="style.css">
+    <script src="template.js"></script>
     <script src="script.js"></script>
 </head>
 <body onload="renderDeletedNotes()">
@@ -23,8 +24,8 @@
         <h1 class="headline">Easy Notes</h1>
       </header>
       <div id="menu" class="menu">
-        <a href="index.html"> <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen">Notizen</a>
-        <a href="trash.html"> <img class="sidemenuIcon" src="./img/delete.png" alt="Papierkorb">Papierkorb</a>
+        <a href="index.html"> <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen">Notes</a>
+        <a href="trash.html"> <img class="sidemenuIcon" src="./img/delete.png" alt="Papierkorb">Trash</a>
       </div>
       <section class="noteContainer" id="deletedNotesContainer"></section>
 </body>
