--- a/trash.html
+++ b/trash.html
@@ -8,7 +8,7 @@
     <script src="template.js"></script>
     <script src="script.js"></script>
 </head>
-<body onload="renderDeletedNotes()">
+<body onload="renderTrashNotes()">
     <header>
         <img 
           class="menuIcon" 
