--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </header>
     <div id="menu" class="menu">
       <a href="index.html">
-        <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen" />Notes</a
+        <img class="sidemenuIcon" src="./img/notes.png" alt="Notizen" />Notizen</a
       >
       <a href="trash.html">
         <img
           class="sidemenuIcon"
           src="./img/delete.png"
           alt="Papierkorb"
-        />Trash</a
+        />Papierkorb</a
       >
     </div>
     <section class="inputContainer">
